<resources>
    <string name="app_name">Vicinity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Please log in</string>
    <string name="nav_header_subtitle">your current location</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Drawer menu item -->
    <string name="drawer_menu_item_settings">Settings</string>
    <string name="drawer_menu_item_about">About</string>
    <string name="drawer_menu_title_communicate">Communicate</string>
    <string name="drawer_menu_item_share">Share</string>

    <string name="location_error_subtitle">Sorry, location is not available. :(</string>

    <!-- Login and Logout -->
    <string name="username_title">Username:</string>
    <string name="username_hint_text">letters and digits only</string>
    <string name="password_title">Password:</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="empty_username_toast">
        The username cannot be empty, please enter a valid username.
    </string>
    <string name="duplicate_username_toast">
        This username is already taken, please change another username.
    </string>
    <string name="sign_up_success_toast">Successfully registered.</string>
    <string name="sign_in_failed_toast">
        Your username or password is incorrect, please sign in again.
    </string>

    <string name="google_maps_key">AIzaSyCHgXce5CiOoCy_yffke3S-alnAdIiApNw</string>
    <string name="map_marker_title">This is your focus</string>

    <string name="title_activity_settings">Settings</string>

    <string name="report_event_master_title">Choose one topic</string>
    <string name="report_event_toolbar_title">Report Event</string>

    <string-array name="report_event_master_item_names">
        <item>Work</item>
        <item>Music</item>
        <item>Weather</item>
        <item>Shopping</item>
        <item>Movie</item>
        <item>Travel</item>
        <item>Working out</item>
        <item>Party</item>
        <item>Note</item>
    </string-array>

    <string name="report_event_detail_comment_hint">Enter your comment here!</string>
    <string name="report_event_detail_back_btn_text">Back</string>
    <string name="report_event_detail_send_btn_text">Send</string>

    <string name="login_hint_toast">To report an event, please login first.</string>
    <string name="upload_event_empty_content_toast">
        The event comment should not be empty, please enter some text.
    </string>
    <string name="upload_event_failed_toast">
        The event is failed, please check your network status.
    </string>
    <string name="upload_success_toast">The event is reported.</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_customize_map_theme">Customize your map theme</string>
    <string-array name="pref_theme_list_titles">
        <item>Standard</item>
        <item>Silver</item>
        <item>Retro</item>
        <item>Dark</item>
        <item>Night</item>
        <item>Aubergine</item>
    </string-array>
    <string-array name="pref_theme_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- String related to About -->
    <string name="title_activity_about">About this app</string>
    <string name="app_designed_by">Designed by Chaoran Chen</string>
    <string name="about_card1_message">Nice to meet you!</string>
    <string name="about_card2_title">Feel free to contact me if you like this app.</string>
    <string name="about_email">Contact me via email</string>
    <string name="about_git_hub">Source code on GitHub</string>
    <string name="about_source_licenses">Open source licenses</string>
    <string name="about_version">Version: </string>
    <string name="about_email_intent">About:Vicinity</string>
    <string name="about_not_found_email">Not found email app</string>
    <string name="dialog_close">Close</string>
    <string name="share_with">Share with</string>
</resources>
